[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dss"
version = "0.01"
description = "Pending"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision", "stable-baselines3", "gymnasium"
]

[project.optional-dependencies]
train = ["ninja", "wandb"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = []

[tool.wheel]
exclude = []